Fix invisible drop highlight and improve Sortable hit area
Apply mu_DropTarget to the hanoirod ENODE (via .tgt parent lookup),
not its parent container. Use outline/box-shadow because Hanoi rods
have 0px borders. Increase emptyInsertThreshold and lower
swapThreshold so drops activate on enter.

--- a/css/style.css
+++ b/css/style.css
@@ -948,10 +948,21 @@
   
   .mu_DropTarget{
 	  border-color: rgb(98 100 255)!important;
+	  outline: 2px solid rgb(98, 100, 255) !important;
+	  outline-offset: 1px;
+	  box-shadow: 0 0 0 3px rgba(98, 100, 255, 0.35) !important;
 	 }
   body[tool=autoAdapt] .mu_DropTarget{
 	border-color: blueviolet!important;
+	outline-color: blueviolet!important;
+	box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.35) !important;
 }
+  [data-enode=hanoirod].mu_DropTarget > .ol_role{
+	  box-shadow: inset 0 0 0 3px rgb(98, 100, 255);
+	 }
+  body[tool=autoAdapt] [data-enode=hanoirod].mu_DropTarget > .ol_role{
+	  box-shadow: inset 0 0 0 3px blueviolet;
+	 }
   
   .debug .tgt{
 	  /* border:1px solid blueviolet; */
